--- a/test/siteref/carlton.html
+++ b/test/siteref/carlton.html
@@ -299,8 +299,9 @@ img {
 <!-- node: "Clearance Corner" -->
 <table cellpadding="0" cellspacing="2" style="border 0px; width: 100%;">
  <tr><td><div class="title">Clearance Corner</div></td></tr>
- <tr><td><p><center><p align="center"><img src="images/vincent/sv-123.jpg" alt="Vincent SV-123" width="610" height="402" hspace="10" vspace="10"></p>
-<br /></center><br><center><span class="title">Vincent SV-123 Integrated Stereo Receiver - was $2599 $1700.00</span></center><br>
+ <tr><td><p><center><p align="center">
+<img src="/images/audiolab/8000av.jpg" hspace="5" vspace="5">
+</p></center><br><center><span class="title">Audiolab special pricing $TBA</span></center><br>
 <!-- node: "Audiolab special pricing" -->
 <table cellpadding="0" cellspacing="2" style="border 0px; width: 100%;">
  <tr><td><table border="0" width="100%"><tr width="100%"><td  width="80%"><div class="title"><a href="?q=node/view/1128">Audiolab special pricing</a></div></td><td width="20%" ><div class="titleright"></div></td></tr></table></td>
@@ -309,33 +310,11 @@ While stocks last, Audiolabs 8000 series is going out at more than 25% off. Matc
  <tr><td class="small"><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1128" title="Read the rest of this posting." class="read-more">read more</a></td></tr>
 </table>
 
-<!-- node: "Rega speaker specials" -->
+<!-- node: "Denon AVR1509 - Run out - $500" -->
 <table cellpadding="0" cellspacing="2" style="border 0px; width: 100%;">
- <tr><td><table border="0" width="100%"><tr width="100%"><td  width="80%"><div class="title"><a href="?q=node/view/1129">Rega speaker specials</a></div></td><td width="20%" ><div class="titleright"></div></td></tr></table></td>
- <tr><td><p></p>
-We here at Carlton AV have gone a little more nuts than usual. In an attempt to build the world's largest stack of speakers, we have claimed a large amount of R series speakers from our friends at Rega. Unfortunately while we were attempting to build the "leaning tower of speak-A!",  Tom and "Magic" have become trapped underneath! So in order to get them out alive and healthy (physically not mentally..), we must sell these speakers before its too late! So to get them out, we have slashed the price of R series speakers in order to free them from their ordeal.</p></td></tr>
- <tr><td class="small"><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1129" title="Read the rest of this posting." class="read-more">read more</a></td></tr>
-</table>
-
-<!-- node: "AMC Preamp 1100" -->
-<table cellpadding="0" cellspacing="2" style="border 0px; width: 100%;">
- <tr><td><table border="0" width="100%"><tr width="100%"><td  width="80%"><div class="title"><a href="?q=node/view/1085">AMC Preamp 1100</a></div></td><td width="20%" ><div class="titleright">$250.00</div></td></tr></table></td>
- <tr><td><p>Ex-demo AMC Preamp, an absolute bargain!</p></td></tr>
-</table>
-
-<!-- node: "Strong SRT 5490 HD PVR - WAS $1400" -->
-<table cellpadding="0" cellspacing="2" style="border 0px; width: 100%;">
- <tr><td><table border="0" width="100%"><tr width="100%"><td  width="80%"><div class="title"><a href="?q=node/view/1087">Strong SRT 5490 HD PVR - WAS $1400</a></div></td><td width="20%" ><div class="titleright">$650.00</div></td></tr></table></td>
- <tr><td><p><p>
-Here's a great bargin on a very capable HDTV recorder. A 250GB hard drive gives one approximately 125 hours of SD TV recording or 30 hours of HD content. The unit also sports USB and network connectivity for file transfer.</p></td></tr>
- <tr><td class="small"><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1087" title="Read the rest of this posting." class="read-more">read more</a></td></tr>
-</table>
-
-<!-- node: "Marantz SR-4001 AV Receiver" -->
-<table cellpadding="0" cellspacing="2" style="border 0px; width: 100%;">
- <tr><td><table border="0" width="100%"><tr width="100%"><td  width="80%"><div class="title"><a href="?q=node/view/1112">Marantz SR-4001 AV Receiver</a></div></td><td width="20%" ><div class="titleright">$975.00</div></td></tr></table></td>
- <tr><td><p>7.1 AV receiver w/HDMI, 80W x 7 channels. HDMI 1.1, 192khz/24 bit DACs on all channels. IR Flasher in, Dolby Headphone, 3 assignable Component Video inputs, HDCD, S-Video - Component conv, B-speakers output</p></td></tr>
- <tr><td class="small"><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1112" title="Read the rest of this posting." class="read-more">read more</a></td></tr>
+ <tr><td><table border="0" width="100%"><tr width="100%"><td  width="80%"><div class="title"><a href="?q=node/view/1071">Denon AVR1509 - Run out - $500</a></div></td><td width="20%" ><div class="titleright">$799.00</div></td></tr></table></td>
+ <tr><td><p>The entry point for Denon Receivers for 2009 this retains that particularly good stereo sound and high quality construction that is the hallmark of all of this product family. If only a consumer were able to open the bonnet of these devices before purchase then a lot of well known brands would fall totally beside the wayside in the quality stakes.</p></td></tr>
+ <tr><td class="small"><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1071" title="Read the rest of this posting." class="read-more">read more</a></td></tr>
 </table>
 
 <!-- node: "Vincent SV-123 Integrated Stereo Receiver - was $2599" -->
@@ -343,13 +322,6 @@ Here's a great bargin on a very capable HDTV recorder. A 250GB hard drive gives 
  <tr><td><table border="0" width="100%"><tr width="100%"><td  width="80%"><div class="title"><a href="?q=node/view/1137">Vincent SV-123 Integrated Stereo Receiver - was $2599</a></div></td><td width="20%" ><div class="titleright">$1700.00</div></td></tr></table></td>
  <tr><td><p>The SV-123 is an ideal entry-level unit for customers who do not want to forego output and good sound even in the compact range. Thanks to the built-in tuner there are many individual possible applications. For example, in combination with the CD-S1.1 or CD-S2. This lets you use the SV-123 with a high-quality system.</p></td></tr>
  <tr><td class="small"><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1137" title="Read the rest of this posting." class="read-more">read more</a></td></tr>
-</table>
-
-<!-- node: "Arcam AVR300 AV receiver - was $2800" -->
-<table cellpadding="0" cellspacing="2" style="border 0px; width: 100%;">
- <tr><td><table border="0" width="100%"><tr width="100%"><td  width="80%"><div class="title"><a href="?q=node/view/1115">Arcam AVR300 AV receiver - was $2800</a></div></td><td width="20%" ><div class="titleright">$2000.00</div></td></tr></table></td>
- <tr><td><p>7 x 100w/channel, 2 x 120w/channel, Dolby Digital EX, DTS ES, DTS 24/96, Dolby Pro logic IIx 2-7 channel, video up-conversion to component or RGB, HDTV compatible component/RGB switching, second zone output with audio and video, 2-way RS232 control port, RDS tuner, backlit remote control.</p></td></tr>
- <tr><td class="small"><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1115" title="Read the rest of this posting." class="read-more">read more</a></td></tr>
 </table>
 
 <!-- node: "Denon AVCA11XVA" -->
@@ -373,12 +345,11 @@ Here's a great bargin on a very capable HDTV recorder. A 250GB hard drive gives 
   <td>
    <table border="0" cellpadding="5" cellspacing="1" style="width: 100%;">
     <tr><td style="background-color: #ffffff; text-align: center;"><div style="color: #404040;"><b>Opinions<br><br><center><img src="/images/users/rab.jpg" border="1"></center></b></div></td></tr>
-    <tr><td style="background-color: #ffffff; vertical-align: top;"><div class="item-list"><ul><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1198" title="0 comments">Carrier pigeon versus Broadband</a> - rab<br>
-</p>
-Winston the carrier pigeon was pitted against a South African Telco's ADSL service to carry 4GB of data 60 miles...<a></a></li><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1197" title="0 comments">3 D Blu Ray</a> - rab<br>While Sony has announced that it is joining in the 3D development scene along with Panasonic the Blu-ray Disc Association has demonstrated the active shutter technology that is one of the leading contenders for this piece of the consumer heart ...<a></a></li><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1195" title="0 comments">LED vs LCD vs Loewe</a> - rab<br></p>
+    <tr><td style="background-color: #ffffff; vertical-align: top;"><div class="item-list"><ul><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1230" title="0 comments">Samsung banned?</a> - rab<br><p>
+Bloomberg report that Korean panel manufacturing giant Samsung has lost it's case against Sharp's litigation on patent infringements in the USA...<a></a></li><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1215" title="1 comment">Lost in translation.</a> - sean<br>We recently received an email from a customer who has pieced together quite a nice little CD based hi-fi system over a period of a year or so...<a></a></li><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1218" title="0 comments">An Open Letter to Prince Philip</a> - troy<br><p>
+I came across a story this morning on the abc website...<a></a></li><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1216" title="0 comments">The HDTV Emperor has no clothes</a> - rab<br><p>
 
-Recently Samsung have been chastised by the UK Advertising Standards Authority over their advertising for their LED TV's...<a></a></li><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1191" title="0 comments">Denon AVR4310 ...</a> - rab<br></p>
-Available this week is this new high end receiver from our favourite surround receiver brand...<a></a></li></ul></div><div class="more-link"><a href="http://www.carltonaudiovisual.com.au/?q=blog" title="Read the latest blog entries.">more</a></div></td></tr>
+Two groups of 30 people watched the same video clip, individually, on the same television...<a></a></li></ul></div><div class="more-link"><a href="http://www.carltonaudiovisual.com.au/?q=blog" title="Read the latest blog entries.">more</a></div></td></tr>
    </table>
   </td>
  </tr>
@@ -392,7 +363,7 @@ Available this week is this new high end receiver from our favourite surround re
   <td>
    <table border="0" cellpadding="5" cellspacing="1" style="width: 100%;">
     <tr><td style="background-color: #ffffff; text-align: center;"><div style="color: #404040;"><b>Latest Additions</b></div></td></tr>
-    <tr><td style="background-color: #ffffff; vertical-align: top;"><div class="item-list"><ul><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1204" title="0 comments">Monitor Audio RX6 ... now available for audition</a></li><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1203" title="0 comments">Musical Fidelity AMS50 Class A Power Amplifier and Primo Triode Preamplifier</a></li><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1201" title="0 comments">Denon PMA-S1</a></li><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1200" title="0 comments">Monitor Audio PL300AV "What Hi-Fi?" Review ... October 2009 issue verbatim</a></li><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1199" title="0 comments">Bryston BDA1 D/A Converter</a></li><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1196" title="0 comments">Sonos CR200 Controller</a></li><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1194" title="0 comments">Denon AVR3310</a></li><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1193" title="0 comments">Denon AVR4310</a></li><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1192" title="0 comments">Sharp LC40LE700X LED Backlit array TV</a></li><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1188" title="0 comments">The Melburnian Penthouse Apartment</a></li><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1185" title="0 comments">Cambridge Audio 650BD Blu Ray player ... coming soon ... ETA November</a></li><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1184" title="0 comments">Dynaudio DM2/7</a></li><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1183" title="0 comments">Marantz BD7003 Blu Ray Player</a></li><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1182" title="0 comments">Peachtree Nova Integrated digital amplifier ... sweet as a nut ...</a></li><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1180" title="0 comments">Loewe Individual Compose ... Factory Bonus</a></li></ul></div></td></tr>
+    <tr><td style="background-color: #ffffff; vertical-align: top;"><div class="item-list"><ul><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1232" title="0 comments">AKG K370 and K390NC high performance in-ear Headphones</a></li><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1231" title="0 comments">Thin TV's</a></li><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1229" title="0 comments">Aaron HMF600</a></li><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1228" title="0 comments">Monitor Audio RX1</a></li><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1227" title="0 comments">Denon DBP2010 Blu Ray Player</a></li><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1226" title="0 comments">Philips 56 inch 21:9 TV with Ambilight</a></li><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1223" title="0 comments">Sharp LC40LB700X  LED back lit TV with built in Blu Ray</a></li><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1222" title="0 comments">Sonos S5 - Now available</a></li><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1221" title="0 comments">Castle Knight 4</a></li><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1220" title="0 comments">Castle Knight 3</a></li><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1217" title="0 comments">Morel Soundspot One Theatre system</a></li><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1212" title="0 comments">AVR4810 coming soon ... Denon Receiver with punch, pose, and purpose</a></li><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1210" title="0 comments">Castle Knight 1 Bookshelf Loudspeaker</a></li><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1207" title="0 comments">Cyrus 6XP integrated amplifier</a></li><li><a href="http://www.carltonaudiovisual.com.au/?q=node/view/1206" title="0 comments">Cyrus 8XPd Integrated amplifier</a></li></ul></div></td></tr>
    </table>
   </td>
  </tr>
